assets/themes/zeppelin/css/style.css
/* ... */
@media only screen
and (min-width: 768px)
and (max-width: 1024px) {
  .navbar-brand small {
    display: none;
  }

  .navbar-collapse.collapse {
    padding-right: 0;
  }

  .advertise .panel-button {
    font-size: 14px;
  }
}

/* master branch docs dropdown menu */
#menu .dropdown-menu li span {
  padding: 3px 10px 10px 10px;
  font-size: 13px;
}

#menu .caret {
  border-top-color: white;
  border-bottom-color: white;
}

#menu .open .caret {
  border-top-color: #428bca;
  border-bottom-color: #428bca;
}

#menu .navbar-brand {
  margin-right: 50px;
}

/* gh-pages branch docs dropdown menu */
.docs .dropdown-menu {
  left: 0;
  right: auto;
}

.docs .dropdown-menu li span {
  font-family: "Roboto", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
  padding: 12px 10px 12px 15px;
  font-size: 15px;
  font-weight: 300;
}

.docs .title {
  color: #3071a9;
}

.docs .dropdown-menu li a {
  padding-left: 30px;
}

/*
** Media Queries CSS
*/

@media (max-width: 991px) {
  body, html {
    overflow-x:hidden;
  }

  .navbar-inverse .navbar-brand {
    font-size: 24px;
  }

  .content {
    padding: 2rem 4rem;
  }
}

@media only screen
and (min-width: 735px)
and (max-width: 991px) {
  .container .zeppelin,
  .container .zeppelin2 {
    background-size: 56%;
  }
}

@media only screen
and (min-width: 630px)
and (max-width: 734px) {
  .container .zeppelin,
  .container .zeppelin2 {
    background-size: 67%;
  }
}

@media only screen
and (max-width: 631px) {
  .container .zeppelin,
  .container .zeppelin2 {
    background-size: 80%;
  }
}

@media (max-width: 768px) {
  .bigFingerButton {
    margin-top: 12px;
    display: block;
    margin-right: auto;
    margin-left: auto;
  }

  .sideMenu {
    margin-bottom: 15px;
  }

  .content {
    padding: 2rem 2rem;
  }
}

@media screen and (min-width: 768px) {
  .carousel-indicators {
    margin-bottom: -60px;
  }

  .carousel-caption {
    padding-bottom: 60px;
  }
}

.zeppelin {
  background-image: url('../img/zepLogo.png');
  background-repeat: no-repeat;
  background-position: center;
  background-size: 40%;
  background-position-y: 11px;
  height: 265px;
  opacity: 0.7;
}

.zeppelin2 {
  background-image: url('../img/zepLogo.png');
  background-repeat: no-repeat;
  background-position: center;
  background-size: 40%;
  background-position-y: 1px;
  height: 245px;
  opacity: 0.2;
}

/* Technologies Section */

.tech_deploy {
  background: #FFF;
  padding-bottom: 40px;
  padding-top: 22px;
}

.tech_deploy p {
  padding-right: 9px;
  padding-left: 9px;
  margin-top: 25px;
  margin-bottom: 30px;
}

.tech_deploy .bottom-text {
  padding-right: 9px;
  padding-left: 9px;
  text-align: center;
  font-size: 17px;
  color: gray;
  font-weight: 200;
  font-style: italic;
  padding-top: 15px;
}

.tech_deploy .section {
  padding: 25px 15px 35px 15px;
  margin-right: auto;
  margin-left: auto;
}

.tech_deploy h2 {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  text-align: center;
  padding-bottom: 30px;
  font-size: 30px;
  font-weight: 300;
  text-transform: uppercase;
  border-bottom: none;
  letter-spacing: 1px;
}

.tech_deploy .panel-content {
  font-weight: 500;
  font-size: 14px;
  height: 100%;
  width: 100%;
  color: #475A60;
  background-color: transparent;
  border: 1px solid #999;
}

._default-text {
  opacity: 1;
  position: absolute;
  width: 90%;
  height: 80%;
  -webkit-transition: 0.6s;
  -moz-transition: 0.6s;
  -o-transition: 0.6s;
  transition: 0.6s;
  -webkit-transition-delay: 0.2s;
  -moz-transition-delay: 0.2s;
  -o-transition-delay: 0.2s;
  transition-delay: 0.2s;
}

.tech_deploy .panel-content ._default-text {
  font-family: 'Raleway', sans-serif;
  font-size: 25px;
  text-align: center;
  font-weight: 300;
  margin-top: 65px;
}

.tech_deploy .panel-content:hover ._default-text,
 .tech_deploy .panel-content:active ._default-text {
  opacity: 0;
  -webkit-transform: scale(0.3);
  -moz-transform: scale(0.3);
  -ms-transform: scale(0.3);
  -o-transform: scale(0.3);
  transform: scale(0.3);
}

._hover-text {
  opacity: 0;
  font-size: 18px;
  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  position: absolute;
  font-weight: 500;
  margin-left: 5px;
  width: 88%;
  -webkit-transition: 0.6s;
  -moz-transition: 0.6s;
  -o-transition: 0.6s;
  transition: 0.6s;
  -webkit-transition-delay: 0.2s;
  -moz-transition-delay: 0.2s;
  -o-transition-delay: 0.2s;
  transition-delay: 0.2s;
  padding: 10px;
  min-height: 200px;
}

.tech_deploy .panel-content:hover ._hover-text,
 .tech_deploy .panel-content:active ._hover-text {
  opacity: 1;
  position: absolute;
  font-weight: 500;
  -webkit-transform: translate(0,0);
  -moz-transform: translate(0,0);
  -ms-transform: translate(0,0);
  -o-transform: translate(0,0);
  transform: translate(0,0);
  -webkit-transition-delay: .4s;
  -moz-transition-delay: .4s;
  -o-transition-delay: .4s;
  transition-delay: .4s;
}

.tech_deploy .panel-content:hover:before,
.tech_deploy .panel-content:hover:after,
 .tech_deploy .panel-content:active:before,
 .tech_deploy .panel-content:active:after {
  content: '';
  position: absolute;
  top: 0.67em;
  left: 0;
  width: 100%;
  text-align: center;
  opacity: 0;
  -webkit-transition: .6s,opacity .6s;
  -moz-transition: .6s,opacity .6s;
  -o-transition: .6s,opacity .6s;
  transition: .6s,opacity .6s;
}

.panel-button {
  position: relative;
  padding: 8px 15px;
  z-index: 3;
  float:right;
  font-family: 'Roboto', sans-serif;
  color: #00A7E0;
  text-decoration: none;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
  outline: 0;
  font-size: 14px;
}

/* Deployments Section */

.tech_deploy .panel-content-user {
  position: relative;
  font-weight: 500;
  font-size: 14px;
  padding: 25px;
  color: #475A60;
  background-color: transparent;
  border: 1px solid #999;
  width: 100%;
  height: 100%;
  padding-bottom: 15px;
  margin-top: 25px;
  margin-bottom: 30px;
}
/* ... */

